gm002 Section Header eingefügt

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <title>Collaborate</title>
 </head>
 <body>
-<h1>I wanna collaborate with you.</h1>
-<h1>I wanna collaborate.</h1>
-<p>Branch: gm001</p>
+<section id="hader-section">
+    <div class="content">
+    <h1>I wanna collaborate with you.</h1>
+    <h1>I wanna collaborate.</h1>
+    <p>Branch: gm001</p>
+    </div>
+</section>
 <footer>Footer soll hier entstehen.</footer>
 </body>
 </html>
